Changes on swagger part
