# api/models/swag.go
@@ -11,8 +11,24 @@ type ConfigInput struct {
 	Value interface{} ``
 }
 
+type ConfigUpdate struct {
+	Type  string      `json:"type"`
+	Value interface{} ``
+}
+
 type AuthToken struct {
 	Success bool        `json:"success"`
 	Data    interface{} `json:"data"`
 	Message string      `json:"message"`
 }
+
+type ExampleGetConfig struct {
+	Success bool `json:"success"`
+	Config ConfigFormatted 
+}
+
+type ExampleSuccessConfig struct {
+	Success bool `json:"success"`
+}
+
+
